<?xml version="1.0"?>
<package format="2">
  <name>test_async_spinner</name>
  <version>0.0.0</version>
  <description>The test_async_spinner package</description>

  <maintainer email="efernandez@clearpath.ai">Enrique Fernandez Perdomo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
